mp4alsRM17 (April 11 2006)

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,31 +1,26 @@
-OBJ = audiorw.o cmdline.o crc.o decoder.o ec.o encoder.o floating.o lms.o lpc.o lpc_adapt.o mcc.o mlz.o mp4als.o rn_bitio.o wave.o
+OBJ = audiorw.o cmdline.o crc.o decoder.o ec.o encoder.o floating.o lms.o lpc.o mcc.o mlz.o mp4als.o rn_bitio.o wave.o
 CFLAGS = -O2
 
 all: $(OBJ)
 
 clean:
-	rm -f $(OBJ)
+	$(RM) $(OBJ)
 
 .cpp.o:
-	g++ -c $(CFLAGS) $<
+	$(CXX) -DNDEBUG -c $(CFLAGS) $<
 
-audiorw.cpp: floating.h
-bitio.h: rn_bitio.h
-cmdline.cpp:
-crc.cpp: crc.h
-decoder.cpp: decoder.h bitio.h lpc.h audiorw.h crc.h wave.h floating.h mcc.h
-decoder.h: wave.h floating.h mcc.h
-ec.cpp:
-encoder.cpp: encoder.h lpc.h ec.h bitio.h audiorw.h crc.h wave.h floating.h lpc_adapt.h mcc.h
-encoder.h: wave.h floating.h mcc.h
-floating.cpp: floating.h mlz.h
-floating.h: bitio.h mlz.h
-lms.cpp: lms.h
-lpc.cpp:
-mcc.cpp: mcc.h ec.h bitio.h rn_bitio.h
-mcc.h: bitio.h
-mlz.cpp: mlz.h
-mlz.h: bitio.h
-mp4als.cpp: wave.h encoder.h decoder.h cmdline.h audiorw.h
-rn_bitio.cpp: rn_bitio.h
-wave.cpp: wave.h
+audiorw.o: audiorw.cpp floating.h
+rn_bitio.o: rn_bitio.cpp rn_bitio.h
+cmdline.o: cmdline.cpp
+crc.o: crc.cpp crc.h
+decoder.o: decoder.cpp decoder.h bitio.h rn_bitio.h lpc.h audiorw.h crc.h wave.h floating.h mcc.h
+ec.o: ec.cpp
+encoder.o: encoder.cpp encoder.h lpc.h ec.h bitio.h audiorw.h crc.h wave.h floating.h mcc.h
+floating.o: floating.cpp floating.h mlz.h bitio.h rn_bitio.h
+lms.o: lms.cpp lms.h
+lpc.o: lpc.cpp lpc.h
+mcc.o: mcc.cpp mcc.h ec.h bitio.h rn_bitio.h
+mlz.o: mlz.cpp mlz.h bitio.h rn_bitio.h
+mp4als.o: mp4als.cpp wave.h encoder.h decoder.h cmdline.h audiorw.h
+wave.o: wave.cpp wave.h
+
