--- a/src/Makefile
+++ b/src/Makefile
@@ -1,26 +1,33 @@
-OBJ = audiorw.o cmdline.o crc.o decoder.o ec.o encoder.o floating.o lms.o lpc.o mcc.o mlz.o mp4als.o rn_bitio.o wave.o
-CFLAGS = -O2
+OBJ = als2mp4.o audiorw.o cmdline.o crc.o decoder.o ec.o encoder.o floating.o lms.o lpc.o mcc.o mlz.o mp4als.o rn_bitio.o wave.o
+INCLUDE = -IAlsImf -IAlsImf/Mp4
 
 all: $(OBJ)
 
 clean:
-	$(RM) $(OBJ)
+	$(RM) -f $(OBJ)
 
 .cpp.o:
-	$(CXX) -DNDEBUG -c $(CFLAGS) $<
+	$(CXX) -c $(CFLAGS) $(INCLUDE) $<
 
+als2mp4.o: als2mp4.cpp als2mp4.h cmdline.h wave.h
 audiorw.o: audiorw.cpp floating.h
-rn_bitio.o: rn_bitio.cpp rn_bitio.h
 cmdline.o: cmdline.cpp
 crc.o: crc.cpp crc.h
-decoder.o: decoder.cpp decoder.h bitio.h rn_bitio.h lpc.h audiorw.h crc.h wave.h floating.h mcc.h
+decoder.o: decoder.cpp decoder.h bitio.h lpc.h audiorw.h crc.h wave.h floating.h mcc.h lms.h
 ec.o: ec.cpp
-encoder.o: encoder.cpp encoder.h lpc.h ec.h bitio.h audiorw.h crc.h wave.h floating.h mcc.h
-floating.o: floating.cpp floating.h mlz.h bitio.h rn_bitio.h
+encoder.o: encoder.cpp encoder.h lpc.h lms.h ec.h bitio.h audiorw.h crc.h wave.h floating.h lpc_adapt.h mcc.h
+floating.o: floating.cpp floating.h mlz.h
 lms.o: lms.cpp lms.h
-lpc.o: lpc.cpp lpc.h
+lpc.o: lpc.cpp
 mcc.o: mcc.cpp mcc.h ec.h bitio.h rn_bitio.h
-mlz.o: mlz.cpp mlz.h bitio.h rn_bitio.h
-mp4als.o: mp4als.cpp wave.h encoder.h decoder.h cmdline.h audiorw.h
+mlz.o: mlz.cpp mlz.h
+mp4als.o: mp4als.cpp wave.h encoder.h decoder.h cmdline.h audiorw.h als2mp4.h
+rn_bitio.o: rn_bitio.cpp rn_bitio.h
 wave.o: wave.cpp wave.h
-
+bitio.h: rn_bitio.h
+decoder.h: wave.h floating.h mcc.h lms.h
+encoder.h: wave.h floating.h mcc.h lms.h
+floating.h: bitio.h mlz.h
+lms.h: mcc.h
+mcc.h: bitio.h
+mlz.h: bitio.h
